[gd_scene load_steps=12 format=3 uid="uid://2vnpdbdqddca"]

[ext_resource type="Script" path="res://scripts/Player.gd" id="1_awddv"]
[ext_resource type="Texture2D" uid="uid://chqof615wm0k6" path="res://assets/Images/skippie.png" id="2_v02ix"]
[ext_resource type="Texture2D" uid="uid://bsmgq2ev377fu" path="res://icon.svg" id="3_m4o2h"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_4rmgp"]
size = Vector2(4, 23)

[sub_resource type="CircleShape2D" id="CircleShape2D_5nm1x"]
radius = 3.0

[sub_resource type="Animation" id="Animation_ik3k3"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [1]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponTemp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite:self_modulate")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("DebugLabel:text")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Attack 1"]
}

[sub_resource type="Animation" id="Animation_estr8"]
resource_name = "attack"
length = 5.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.6, 1, 1.8, 2, 2.4, 2.8, 3.5, 3.7, 4.1, 4.5),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [5, 8, 5, 0, 5, 8, 5, 0, 5, 8, 5, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("WeaponTemp:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.2, 0.7, 1.8, 2, 2.5, 3.5, 3.7, 4.2),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [false, true, false, false, true, false, false, true, false]
}
tracks/2/type = "method"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0.2, 1.4, 2, 3.2, 3.7, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"values": [{
"args": [],
"method": &"attack_1"
}, {
"args": [],
"method": &"attack_end"
}, {
"args": [],
"method": &"attack_2"
}, {
"args": [],
"method": &"attack_end"
}, {
"args": [],
"method": &"attack_3"
}, {
"args": [],
"method": &"attack_end"
}]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Sprite:self_modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.2, 1.8, 3.5, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 0, 0, 1), Color(0.2, 1, 0, 1), Color(0, 1, 0.966667, 1), Color(1, 1, 1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("DebugLabel:text")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0.2, 2, 3.7, 4.9),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": ["Attack 1", "Attack 2", "Attack 3", "Idle"]
}

[sub_resource type="Animation" id="Animation_5llnc"]
resource_name = "idle"
length = 0.8
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [8, 9, 10, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DebugLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Idle"]
}

[sub_resource type="Animation" id="Animation_yhpwf"]
resource_name = "sprint"
length = 1.12
loop_mode = 1
step = 0.07
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.07, 0.28, 0.42, 0.63, 0.7, 0.84, 0.98),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 0]
}

[sub_resource type="Animation" id="Animation_l0siu"]
resource_name = "walk"
length = 1.12
loop_mode = 1
step = 0.14
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.14, 0.28, 0.42, 0.56, 0.7, 0.84, 0.98),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1, 1),
"update": 1,
"values": [1, 2, 3, 4, 5, 6, 7, 0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("DebugLabel:text")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": ["Walk"]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_anspb"]
_data = {
"RESET": SubResource("Animation_ik3k3"),
"attack": SubResource("Animation_estr8"),
"idle": SubResource("Animation_5llnc"),
"sprint": SubResource("Animation_yhpwf"),
"walk": SubResource("Animation_l0siu")
}

[node name="Player" type="CharacterBody2D"]
z_index = 5
floor_constant_speed = true
floor_snap_length = 5.0
script = ExtResource("1_awddv")

[node name="Detectors" type="Node2D" parent="."]

[node name="FeetL" type="RayCast2D" parent="Detectors"]
position = Vector2(-3, -1)
target_position = Vector2(0, 2)

[node name="FeetR" type="RayCast2D" parent="Detectors"]
position = Vector2(3, -1)
target_position = Vector2(0, 2)

[node name="StairsLUp" type="RayCast2D" parent="Detectors"]
position = Vector2(-2, -7)
target_position = Vector2(-3, 0)

[node name="StairsLMid" type="RayCast2D" parent="Detectors"]
position = Vector2(-2, -1)
target_position = Vector2(-2, 0)

[node name="StairsLDown" type="RayCast2D" parent="Detectors"]
position = Vector2(-4, -10)
target_position = Vector2(0, 13)

[node name="StairsRUp" type="RayCast2D" parent="Detectors"]
position = Vector2(2, -7)
target_position = Vector2(3, 0)

[node name="StairsRMid" type="RayCast2D" parent="Detectors"]
position = Vector2(2, -1)
target_position = Vector2(2, 0)

[node name="StairsRDown" type="RayCast2D" parent="Detectors"]
position = Vector2(4, -10)
target_position = Vector2(0, 13)

[node name="BodyL" type="RayCast2D" parent="Detectors"]
position = Vector2(-2, -19)
target_position = Vector2(-3, 0)

[node name="BodyR" type="RayCast2D" parent="Detectors"]
position = Vector2(2, -19)
target_position = Vector2(3, 0)

[node name="HeadUp" type="RayCast2D" parent="Detectors"]
position = Vector2(0, -33)
target_position = Vector2(0, -4)

[node name="Sprite" type="Sprite2D" parent="."]
position = Vector2(0, -32)
texture = ExtResource("2_v02ix")
hframes = 12
frame = 1

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
modulate = Color(0.658824, 1, 0.678431, 1)
position = Vector2(0, -16.5)
shape = SubResource("RectangleShape2D_4rmgp")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="CollisionShape2D2" type="CollisionShape2D" parent="."]
modulate = Color(0.658824, 1, 0.678431, 1)
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_5nm1x")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="CollisionShape2D3" type="CollisionShape2D" parent="."]
modulate = Color(0.658824, 1, 0.678431, 1)
position = Vector2(0, -30)
shape = SubResource("CircleShape2D_5nm1x")
debug_color = Color(0, 0.6, 0.7, 0.42)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_anspb")
}
autoplay = "idle"

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, -111)
position_smoothing_enabled = true

[node name="WeaponTemp" type="Sprite2D" parent="."]
visible = false
position = Vector2(-25, -19)
scale = Vector2(0.2, 0.2)
texture = ExtResource("3_m4o2h")

[node name="DebugLabel" type="Label" parent="."]
offset_top = -64.0
offset_right = 88.0
offset_bottom = -41.0
text = "Attack 1"
